@@ -99,34 +99,28 @@ class ProtRelionReconstructParticle(ProtRelionMakePseudoSubtomoAndRecParticleBas
     def createOutputStep(self):
         inParticles = self.inReParticles.get()
         currentSamplingRate = inParticles.getTsSamplingRate() * self.binningFactor.get()
-        postProccesMrc = None
         halves = [self._getExtraPath('half1.mrc'), self._getExtraPath('half2.mrc')]
 
         # Fix headers to be interpreted as volumes instead of stacks
         [fixVolume(mrcFile) for mrcFile in glob.glob(self._getExtraPath('*.mrc'))]
-
-        # Output psubtomos
-        psubtomoSet = super().createOutputStep()
 
         # Output average
         vol = AverageSubTomogram()
         vol.setFileName(self._getExtraPath('merged.mrc'))
         vol.setHalfMaps(halves)
         vol.setSamplingRate(currentSamplingRate)
-        outputsDir = {outputObjects.relionParticles.name: psubtomoSet, outputObjects.average.name: vol}
+        self._defineOutputs(**{outputObjects.average.name: vol})
 
         # Output solvent mask
         if self.solventMask.get():
             postProccesMrc = self._genPostProcessOutputMrcFile(POST_PROCESS_MRC)
             postProccesMrc.setHalfMaps(halves)
             postProccesMrc.setSamplingRate(currentSamplingRate)
-            outputsDir.update({outputObjects.postProcessVolume.name: postProccesMrc})
-
-        self._defineOutputs(**outputsDir)
-        self._defineSourceRelation(inParticles, psubtomoSet)
-        self._defineSourceRelation(inParticles, vol)
-        if postProccesMrc:
+            self._defineOutputs(**{outputObjects.postProcessVolume.name: postProccesMrc})
             self._defineSourceRelation(inParticles, postProccesMrc)
+
+        self._defineSourceRelation(inParticles, vol)
+
 
     # -------------------------- INFO functions -------------------------------
     def _validate(self):
